@@ -24314,7 +24314,7 @@
     </location>
     <location>
       <!-- Translators: This is in Iceland. -->
-      <_name>Akurnes</_name>
+      <_name>Höfn í Hornafirði</_name>
       <code>BIHN</code>
       <coordinates>64-18N 015-13W</coordinates>
     </location>
@@ -24370,21 +24370,29 @@
   <country>
     <_name>Latvia</_name>
     <location>
-      <_name>Liepaja</_name>
+      <!-- Translators: This is in Latvia. -->
+      <_name>Liepāja</_name>
       <code>EVLA</code>
       <coordinates>56-31N 021-05E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Latvia.
+	The local name is "Rīga".
+	-->
       <_name>Riga</_name>
       <code>EVRA</code>
       <coordinates>56-55N 023-58E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Latvia.
+	The local name is "Rīga".
+	-->
       <_name>Riga</_name>
       <code>UMRR</code>
       <coordinates>56-58N 024-03E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Latvia. -->
       <_name>Ventspils</_name>
       <code>UMRW</code>
       <coordinates>57-24N 021-32E</coordinates>
@@ -24393,25 +24401,30 @@
   <country>
     <_name>Lithuania</_name>
     <location>
+      <!-- Translators: This is in Lithuania. -->
       <_name>Kaunas</_name>
       <code>EYKA</code>
       <coordinates>54-54N 023-55-12E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Lithuania. -->
       <_name>Palanga</_name>
       <code>EYPA</code>
       <coordinates>55-55-12N 021-03E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Lithuania. -->
       <_name>Panevėžys</_name>
       <code>EYPN</code>
     </location>
     <location>
+      <!-- Translators: This is in Lithuania. -->
       <_name>Šiauliai</_name>
       <code>EYSA</code>
       <coordinates>55-53-38N 023-23-42E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Lithuania. -->
       <_name>Vilnius</_name>
       <code>EYVI</code>
       <coordinates>54-38N 025-06E</coordinates>
@@ -24420,6 +24433,11 @@
   <country>
     <_name>Luxembourg</_name>
     <location>
+      <!-- Translators: This is in Luxembourg.
+	   local name (lb_LU): Lëtzebuerg
+	   local name (fr_LU): Luxembourg
+	   local name (de_LU): Luxemburg
+	-->
       <_name>Luxembourg</_name>
       <code>ELLX</code>
       <coordinates>49-37N 006-13E</coordinates>
@@ -24428,11 +24446,17 @@
   <country>
     <_name>Macedonia</_name>
     <location>
+      <!-- Translators: This is in Macedonia.
+	The local name is "Охрид".
+	-->
       <_name>Ohrid</_name>
       <code>LWOH</code>
       <coordinates>41-07N 020-48E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Macedonia.
+	The local name of "Skopje" is "Скопје".
+	-->
       <_name>Skopje/Petrovec</_name>
       <code>LWSK</code>
       <coordinates>41-58N 021-39E</coordinates>
@@ -24441,6 +24465,7 @@
   <country>
     <_name>Malta</_name>
     <location>
+      <!-- Translators: This is in Malta. -->
       <_name>Luqa</_name>
       <code>LMML</code>
       <coordinates>35-51N 014-29E</coordinates>
@@ -24449,16 +24474,19 @@
   <country>
     <_name>Moldova</_name>
     <location>
+      <!-- Translators: This is in Moldova. -->
       <_name>Bălţi-Leadoveni</_name>
       <code>LUBL</code>
       <coordinates>47-50-03N 027-46-09E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Moldova. -->
       <_name>Chişinău</_name>
       <code>LUKK</code>
       <coordinates>46-55-40N 028-55-51E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Moldova. -->
       <_name>Cahul</_name>
       <code>LUCH</code>
       <coordinates>45-50-38N 028-15-55E</coordinates>
@@ -24467,336 +24495,407 @@
   <country>
     <_name>Norway</_name>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Ålesund/Vigra</_name>
       <code>ENAL</code>
       <coordinates>62-34N 006-07E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Alta</_name>
       <code>ENAT</code>
       <coordinates>69-59N 023-22E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Andøya</_name>
       <code>ENAN</code>
       <coordinates>69-18N 016-09E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Banak</_name>
       <code>ENNA</code>
       <coordinates>70-04N 024-59E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Bardufoss</_name>
       <code>ENDU</code>
       <coordinates>69-04N 018-32E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Båtsfjord</_name>
       <code>ENBS</code>
       <coordinates>70-38N 029-44E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Bergen/Flesland</_name>
       <code>ENBR</code>
       <coordinates>60-17N 005-14E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Berlevag</_name>
       <code>ENBV</code>
       <coordinates>70-52N 029-02E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Bjørnøya</_name>
       <code>ENBJ</code>
       <coordinates>74-31N 019-01E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Bodø</_name>
       <code>ENBO</code>
       <coordinates>67-16N 014-22E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Brønnøysund</_name>
       <code>ENBN</code>
       <coordinates>65-28N 012-13E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Brønnøysund/Brønnøy</_name>
       <code>ENBN</code>
       <coordinates>65-28N 012-13E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Dagali</_name>
       <code>ENDI</code>
       <coordinates>60-25N 008-31E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Draugen</_name>
       <code>ENDR</code>
       <coordinates>64-21-20N 007-47-30E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Ekofisk</_name>
       <code>ENEK</code>
       <coordinates>56-33N 003-15E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Evenes/Harstad/Narvik</_name>
       <code>ENEV</code>
       <coordinates>68-31N 016-41E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Fagernes</_name>
       <code>ENFG</code>
       <coordinates>61-00N 009-18E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Florø</_name>
       <code>ENFL</code>
       <coordinates>61-35N 005-02E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Førde/Bringeland</_name>
       <code>ENBL</code>
       <coordinates>61-27N 005-52E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Frigg</_name>
       <code>ENFR</code>
       <coordinates>59-56N 002-00E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Gullfax C</_name>
       <code>ENGC</code>
       <coordinates>61-02N 002-02E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Hammerfest</_name>
       <code>ENHF</code>
       <coordinates>70-40N 023-40E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Hasvik</_name>
       <code>ENHK</code>
       <coordinates>70-29N 022-09E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Haugesund/Karmøy</_name>
       <code>ENHD</code>
       <coordinates>59-21N 005-13E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Heidrun</_name>
       <code>ENHE</code>
       <coordinates>65-19-30N 002-19-36E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Honningsvåg/Valan</_name>
       <code>ENHV</code>
       <coordinates>71-01N 025-59E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Hopen</_name>
       <code>ENHO</code>
       <coordinates>76-30N 025-04E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Jan Mayen</_name>
       <code>ENJA</code>
       <coordinates>70-56N 008-40W</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Kautokeino</_name>
       <code>ENKA</code>
       <coordinates>69-00N 023-02E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Kirkenes</_name>
       <code>ENKR</code>
       <coordinates>69-44N 029-54E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Kristiansand/Kjevik</_name>
       <code>ENCN</code>
       <coordinates>58-12N 008-05E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Kristiansund/Kvernberget</_name>
       <code>ENKB</code>
       <coordinates>63-07N 007-50E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Leknes</_name>
       <code>ENLK</code>
       <coordinates>68-09N 013-37E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Lista</_name>
       <code>ENLI</code>
       <coordinates>58-06N 006-38E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Mehamn</_name>
       <code>ENMH</code>
       <coordinates>71-02N 027-50E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Mo i Rana/Rossvoll</_name>
       <code>ENRA</code>
       <coordinates>66-22N 014-18E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Molde/Årø</_name>
       <code>ENML</code>
       <coordinates>62-45N 007-16E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Mosjøen</_name>
       <code>ENMS</code>
       <coordinates>65-48N 013-08E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Namsos</_name>
       <code>ENNM</code>
       <coordinates>64-28N 011-35E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Narvik</_name>
       <code>ENNK</code>
       <coordinates>68-28N 017-30E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Notodden</_name>
       <code>ENNO</code>
       <coordinates>59-34N 009-13E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Ny-Ålesund</_name>
       <code>ENAS</code>
       <coordinates>78-55N 011-56E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Ørland</_name>
       <code>ENOL</code>
       <coordinates>63-42N 009-36E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Ørsta-Volda/Hovden</_name>
       <code>ENOV</code>
       <coordinates>62-11N 006-04E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Oseberg A</_name>
       <code>ENOA</code>
       <coordinates>59-19N 010-27E</coordinates>
     </location>
+    <city>
+      <!-- Translators: This is in Norway. -->
+      <_name>Oslo</_name>
+      <location>
+        <!-- Translators: This is in Oslo, Norway. -->
+        <_name>Fornebu</_name>
+        <code>ENFB</code>
+        <coordinates>59-54N 010-38E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Oslo, Norway. -->
+        <_name>Gardermoen</_name>
+        <code>ENGM</code>
+        <coordinates>60-12N 011-05E</coordinates>
+      </location>
+    </city>
     <location>
-      <_name>Oslo/Fornebu</_name>
-      <code>ENFB</code>
-      <coordinates>59-54N 010-38E</coordinates>
-    </location>
-    <location>
-      <_name>Oslo/Gardermoen</_name>
-      <code>ENGM</code>
-      <coordinates>60-12N 011-05E</coordinates>
-    </location>
-    <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Røros</_name>
       <code>ENRO</code>
       <coordinates>62-35N 011-21E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Rørvik/Ryum</_name>
       <code>ENRM</code>
       <coordinates>64-50N 011-09E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Røst</_name>
       <code>ENRS</code>
       <coordinates>67-31N 012-06E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Rygge</_name>
       <code>ENRY</code>
       <coordinates>59-23N 010-47E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Sandane/Anda</_name>
       <code>ENSD</code>
       <coordinates>61-50N 006-07E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Sandnessjøen/Stokka</_name>
       <code>ENST</code>
       <coordinates>65-58N 012-28E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Skien-Geiteryggen</_name>
       <code>ENSN</code>
       <coordinates>59-11N 009-34E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Sogndal/Haukåsen</_name>
       <code>ENSG</code>
       <coordinates>61-09N 007-08E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Sørkjosen</_name>
       <code>ENSR</code>
       <coordinates>69-47N 020-58E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Stavanger/Sola</_name>
       <code>ENZV</code>
       <coordinates>58-53N 005-38E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Stord/Sørstokken</_name>
       <code>ENSO</code>
       <coordinates>59-48N 005-21E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Storkmarknes/Skagen</_name>
       <code>ENSK</code>
       <coordinates>68-35N 015-01E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Svalbard</_name>
       <code>ENSB</code>
       <coordinates>78-15N 015-28E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Svartnes</_name>
       <code>ENSS</code>
       <coordinates>70-21N 031-03E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Svolvær/Helle</_name>
       <code>ENSH</code>
       <coordinates>68-15N 014-40E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Torp</_name>
       <code>ENTO</code>
       <coordinates>59-12N 010-16E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Tromsø/Langnes</_name>
       <code>ENTC</code>
       <coordinates>69-41N 018-55E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Trondheim/Vaernes</_name>
       <code>ENVA</code>
       <coordinates>63-28N 010-56E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Vadsø</_name>
       <code>ENVD</code>
       <coordinates>70-04N 029-51E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Norway. -->
       <_name>Voss/Bømoen</_name>
       <code>ENBM</code>
       <coordinates>60-39N 006-30E</coordinates>
@@ -24805,57 +24904,86 @@
   <country>
     <_name>Poland</_name>
     <location>
-      <_name>Gdansk-Rebiechowo</_name>
+      <!-- Translators: This is in Poland.
+	The German name for Gdańsk is "Danzig".
+	-->
+      <_name>Gdańsk-Rebiechowo</_name>
       <code>EPGD</code>
       <coordinates>54-23N 018-28E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Poland.
+	The German name is "Kattowitz".
+	-->
       <_name>Katowice</_name>
       <code>EPKT</code>
       <coordinates>50-14N 019-02E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Poland.
+	The German name is "Köslin".
+	-->
       <_name>Koszalin</_name>
       <code>EPKO</code>
       <coordinates>54-12N 016-09E</coordinates>
     </location>
     <location>
-      <_name>Krakow</_name>
+      <!-- Translators: This is in Poland.
+	The German name is "Krakau".
+	-->
+      <_name>Kraków</_name>
       <code>EPKK</code>
       <coordinates>50-05N 019-48E</coordinates>
     </location>
     <location>
-      <_name>Poznan</_name>
+      <!-- Translators: This is in Poland.
+	The German name is "Posen".
+	-->
+      <_name>Poznań</_name>
       <code>EPPO</code>
       <coordinates>52-25N 016-50E</coordinates>
     </location>
     <location>
-      <_name>Rzeszow-Jasionka</_name>
+      <!-- Translators: This is in Poland. -->
+      <_name>Rzeszów-Jasionka</_name>
       <code>EPRZ</code>
       <coordinates>50-06N 022-03E</coordinates>
     </location>
     <location>
-      <_name>Slupsk</_name>
+      <!-- Translators: This is in Poland.
+	The German name is "Stolp".
+	-->
+      <_name>Słupsk</_name>
       <code>EPSK</code>
       <coordinates>54-28N 017-01E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Poland.
+	The German name is "Stettin".
+	-->
       <_name>Szczecin</_name>
       <code>EPSC</code>
       <coordinates>53-24N 014-37E</coordinates>
     </location>
     <location>
+      <!-- Translators: This is in Poland. -->
       <_name>Warszawa-Okecie</_name>
       <code>EPWA</code>
       <coordinates>52-10N 020-58E</coordinates>
     </location>
     <location>
-      <_name>Wroclaw</_name>
+      <!-- Translators: This is in Poland.
+	The German name is "Breslau".
+	-->
+      <_name>Wrocław</_name>
       <code>EPWR</code>
       <coordinates>51-06N 016-53E</coordinates>
     </location>
     <location>
-      <_name>Zielona</_name>
+      <!-- Translators: This is in Poland.
+	The German name is "Grünberg".
+	-->
+      <_name>Zielona Góra</_name>
       <code>EPZG</code>
       <coordinates>51-56N 015-32E</coordinates>
     </location>
