@@ -1,3 +1,8 @@
+2005-03-31  Christian Rose  <menthos@menthos.com>
+
+	* Locations.xml.in: Added some more translator
+	comments, explaining what country the names come from.
+
 2005-03-30  Christian Rose  <menthos@menthos.com>
 
 	* Locations.xml.in: Added some more translator
